apps/neuvector/prod/01/neuvector-redirect-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuvector-redirect-ingress
  namespace: neuvector
spec:
  rules:
    - host: cft-neuvector01.platform.hmcts.net
      http:
        paths:
          - backend:
              service:
                name: neuvector-service-webui
                port:
                  number: 8443
            path: /
            pathType: ImplementationSpecific
